# weather-fetcher-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/apps/TestApp/: main.cpp
